--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -9,11 +9,11 @@ spring:
 eureka:
   client:
     #表示是否将自己注册进EurekaServer默认为true
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:7001/eureka
       #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群版
-#  instance:
-#    instance-id: order80
-#    prefer-ip-address: false
+  instance:
+    instance-id: order80
+    prefer-ip-address: false
