--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
-
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
-!/.idea/
-/cloud-api-commons/target/
-/cloud-api-commons/target/
-!/.idea/
+/.settings/
+/target/
+/.classpath
+/.project
+/.idea
+/*.iml
+/.settings
+/.myumldata
+/.factorypath
